WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279055
[HTMLMediaElement] Reschedule timeupdate event if fired too early
https://bugs.webkit.org/show_bug.cgi?id=279055
Summary
[HTMLMediaElement] Reschedule timeupdate event if fired too early
Enrique Ocaña
Reported
2024-09-03 05:34:15 PDT
HTMLMediaElement fires 'timeupdate' every 250ms in repeating timer. If the timer is fired before 250ms from the last occurrence, it is silently skipped and needs to wait for another 250ms. As a result, the gap between two following timeupdate events may vary 250-500ms. This may happen in two cases: 1) Non-periodic timeupdate event is scheduled for any reason. 2) When the difference between two timer calls is lower than 250ms. This may happen when there are multiple timers to handle at the same time in ThreadTimers (maxDurationOfFiringTimers). See:
https://github.com/WebPlatformForEmbedded/WPEWebKit/pull/1392
Attachments
Add attachment
proposed patch, testcase, etc.
Enrique Ocaña
Comment 1
2024-09-03 05:36:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33060
EWS
Comment 2
2024-09-06 04:18:56 PDT
Committed
283264@main
(fb9b6139ada3): <
https://commits.webkit.org/283264@main
> Reviewed commits have been landed. Closing PR #33060 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-09-06 04:19:14 PDT
<
rdar://problem/135407307
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug